# compressnets

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup-old.py  setup.py
.github/workflows/: publish-to-pypi.yml
compressnets/: __init__.py  compression.py  demos.py  network.py
compressnets/examples/: networks.py  sample_network
odesolutions/: __init__.py  solvers.py
tests/: test_compression.py
