# pyproject.toml

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "compressnets"
version = "0.1.9"
description = 'Package for temporal network data compression'
readme = "README.md"
authors = [{ name = "Andrea Allen", email = "andrea2allen@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["python", "compressnets", "networks", "compression"]
python_requires=">=3.6"

[project.urls]
Homepage = "https://github.com/andrea-allen/compressnets"